# gazebo-trajectory-visualization-plugin

./: .gitignore  CMakeLists.txt  README.md  commander.cc  trajectory_wp.cc
example/gazebo/: commander.cc
example/gazebo/world/: lines.world
example/orocos/scripts/: start.ops
src/gazebo/: trajectory_wp.cc
src/orocos/: CMakeLists.txt  orocosTrajectoryService.cpp  start.ops
